force-app/main/default/objects/Case/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <formula>Equipment__r.Vendor_Equipment_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Name</label>
    <type>Text</type>
</CustomField>