force-app/main/default/objects/Case/fields/Has_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Has_Invoice__c</fullName>
    <formula>NOT( ISBLANK( Invoice__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Invoice</label>
    <type>Checkbox</type>
</CustomField>