force-app/main/default/objects/Case/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice record of the Pdf associated with this case.</description>
    <label>Invoice</label>
    <referenceTo>Schindler_Invoice_History__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>