force-app/main/default/objects/Case/fields/Invoice_Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Customer_Comments__c</fullName>
    <label>Invoice Customer Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>