force-app/main/default/objects/Case/fields/Invoice_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Group_Email__c</fullName>
    <formula>Invoice__r.Account__r.Group_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Group Email</label>
    <type>Text</type>
</CustomField>