force-app/main/default/objects/Case/fields/Next_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Date__c</fullName>
    <formula>Equipment__r.Next_Maintenance_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Visit Date</label>
    <type>Date</type>
</CustomField>