force-app/main/default/objects/Case/fields/Schindler_Invoice_History__c.field-meta.xml
<CustomField>
    <fullName>Schindler_Invoice_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Schindler_Invoice_History__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>