force-app/main/default/objects/Case/listViews/Support_Queue_This_Week.listView-meta.xml
<ListView>
    <fullName>Support_Queue_This_Week</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Support Queue - This Week</label>
    <queue>Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>