force-app/main/default/objects/Case/listViews/Today_Cases.listView-meta.xml
<ListView>
    <fullName>Today_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.REASON</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Cases</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>